@@ -556,6 +556,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|ModifiableSolrParams
 import|;
 end_import
@@ -3550,6 +3566,456 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * We assert that if master is down for more than poll interval,    * the slave doesn't re-fetch the whole index from master again if    * the index hasn't changed. See SOLR-9036    */
+annotation|@
+name|Test
+DECL|method|doTestIndexFetchOnMasterRestart
+specifier|public
+name|void
+name|doTestIndexFetchOnMasterRestart
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|useFactory
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|clearIndexWithReplication
+argument_list|()
+expr_stmt|;
+comment|// change solrconfig having 'replicateAfter startup' option on master
+name|master
+operator|.
+name|copyConfigFile
+argument_list|(
+name|CONF_DIR
+operator|+
+literal|"solrconfig-master2.xml"
+argument_list|,
+literal|"solrconfig.xml"
+argument_list|)
+expr_stmt|;
+name|masterJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|masterJetty
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|nDocs
+operator|--
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|nDocs
+condition|;
+name|i
+operator|++
+control|)
+name|index
+argument_list|(
+name|masterClient
+argument_list|,
+literal|"id"
+argument_list|,
+name|i
+argument_list|,
+literal|"name"
+argument_list|,
+literal|"name = "
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+name|masterClient
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|NamedList
+name|masterQueryRsp
+init|=
+name|rQuery
+argument_list|(
+name|nDocs
+argument_list|,
+literal|"*:*"
+argument_list|,
+name|masterClient
+argument_list|)
+decl_stmt|;
+name|SolrDocumentList
+name|masterQueryResult
+init|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|masterQueryRsp
+operator|.
+name|get
+argument_list|(
+literal|"response"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|nDocs
+argument_list|,
+name|numFound
+argument_list|(
+name|masterQueryRsp
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//get docs from slave and check if number is equal to master
+name|NamedList
+name|slaveQueryRsp
+init|=
+name|rQuery
+argument_list|(
+name|nDocs
+argument_list|,
+literal|"*:*"
+argument_list|,
+name|slaveClient
+argument_list|)
+decl_stmt|;
+name|SolrDocumentList
+name|slaveQueryResult
+init|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|slaveQueryRsp
+operator|.
+name|get
+argument_list|(
+literal|"response"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|nDocs
+argument_list|,
+name|numFound
+argument_list|(
+name|slaveQueryRsp
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//compare results
+name|String
+name|cmp
+init|=
+name|BaseDistributedSearchTestCase
+operator|.
+name|compare
+argument_list|(
+name|masterQueryResult
+argument_list|,
+name|slaveQueryResult
+argument_list|,
+literal|0
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|cmp
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|getSlaveDetails
+argument_list|(
+literal|"timesIndexReplicated"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|timesFailed
+init|=
+name|getSlaveDetails
+argument_list|(
+literal|"timesFailed"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|timesFailed
+operator|!=
+literal|null
+condition|?
+name|timesFailed
+else|:
+literal|"0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|masterJetty
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+comment|// poll interval on slave is 1 second, so we just sleep for a few seconds
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|masterJetty
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+comment|// poll interval on slave is 1 second, so we just sleep for a few seconds
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+comment|//get docs from slave and assert that they are still the same as before
+name|slaveQueryRsp
+operator|=
+name|rQuery
+argument_list|(
+name|nDocs
+argument_list|,
+literal|"*:*"
+argument_list|,
+name|slaveClient
+argument_list|)
+expr_stmt|;
+name|slaveQueryResult
+operator|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|slaveQueryRsp
+operator|.
+name|get
+argument_list|(
+literal|"response"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|nDocs
+argument_list|,
+name|numFound
+argument_list|(
+name|slaveQueryRsp
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|int
+name|failed
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|getSlaveDetails
+argument_list|(
+literal|"timesFailed"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|failed
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|getSlaveDetails
+argument_list|(
+literal|"timesIndexReplicated"
+argument_list|)
+argument_list|)
+operator|-
+name|failed
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|resetFactory
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|getSlaveDetails
+specifier|private
+name|String
+name|getSlaveDetails
+parameter_list|(
+name|String
+name|keyName
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+block|{
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|,
+literal|"/replication"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"command"
+argument_list|,
+literal|"details"
+argument_list|)
+expr_stmt|;
+name|QueryResponse
+name|response
+init|=
+name|slaveClient
+operator|.
+name|query
+argument_list|(
+name|params
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"SHALIN: "
+operator|+
+name|response
+operator|.
+name|getResponse
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// details/slave/timesIndexReplicated
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|details
+init|=
+operator|(
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|response
+operator|.
+name|getResponse
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"details"
+argument_list|)
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|slave
+init|=
+operator|(
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|details
+operator|.
+name|get
+argument_list|(
+literal|"slave"
+argument_list|)
+decl_stmt|;
+name|Object
+name|o
+init|=
+name|slave
+operator|.
+name|get
+argument_list|(
+name|keyName
+argument_list|)
+decl_stmt|;
+return|return
+name|o
+operator|!=
+literal|null
+condition|?
+name|o
+operator|.
+name|toString
+argument_list|()
+else|:
+literal|null
+return|;
 block|}
 annotation|@
 name|Test
